model-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: modelservice-deployment
  labels:
    app: modelservice
spec:
  replicas: 3
  selector:
    matchLabels:
      app: modelservice
  template:
    metadata:
      labels:
        app: modelservice
    spec:
      containers:
      - name: modelservice
        image: ghcr.io/remla23-team5/model-service:latest
        ports:
        - containerPort: 8080
      imagePullSecrets:
        - name: regcred-remla

---

apiVersion: v1
kind: Service
metadata:
  name: modelservice-service
spec:
  selector:
    app: modelservice
  ports:
    - port: 8080
      targetPort: 8080
