mysqldb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysqldb-serv
spec:
  selector:
    app: mysqldb
  ports:
    - name: mysqldb
      port: 3306
      targetPort: 3306
  clusterIP: None

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysqldb
spec:
  serviceName: mysqldb-serv
  replicas: 1
  selector:
    matchLabels:
      app: mysqldb
  template:
    metadata:
      labels:
        app: mysqldb
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: mysqldb
          image: mysql:8.0.30
          imagePullPolicy: IfNotPresent
          ports:
            - name: tpc
              protocol: TCP
              containerPort: 3306
          volumeMounts:
            - name: mysqldb-pvc
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: mysqldb-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
