traffic-management.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-service-v1
  labels:
    app: model-service
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: model-service
      version: v1
  template:
    metadata:
      labels:
        app: model-service
        version: v1
    spec:
      containers:
      - name: model-service
        image: ghcr.io/remla23-team5/model-service:v0.0.12
        ports:
        - containerPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v1
  labels:
    app: app
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
      version: v1
  template:
    metadata:
      labels:
        app: app
        version: v1
    spec:
      containers:
      - name: app
        image: ghcr.io/remla23-team5/app:latest
        ports:
        - containerPort: 8000
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-service-v2
  labels:
    app: model-service
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: model-service
      version: v2
  template:
    metadata:
      labels:
        app: model-service
        version: v2
    spec:
      containers:
      - name: model-service
        image: ghcr.io/remla23-team5/model-service:v0.0.12
        ports:
        - containerPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v2
  labels:
    app: app
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
      version: v2
  template:
    metadata:
      labels:
        app: app
        version: v2
    spec:
      containers:
      - name: app
        image: ghcr.io/remla23-team5/app:v2
        ports:
        - containerPort: 8000
---

apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    app: app
  ports:
    - name: http
      port: 1234
      targetPort: 8000

---

apiVersion: v1
kind: Service
metadata:
  name: model-service-serv
spec:
  selector:
    app: model-service
  ports:
    - name: http
      port: 1234
      targetPort: 8080

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: app
spec:
  host: app
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: model-service
spec:
  host: model-service-serv
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: team5-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: team5-entry-service
spec:
  gateways:
    - team5-gateway
  hosts:
  - "*"
  http:
  - match:
    #- queryParams:  # ?version=v2
    #    version: 
    #      exact: v2
    - uri:
        prefix: /v2
    route:
    - destination:
        host: app
        subset: v2
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: app
        subset: v1
      weight: 50
    - destination:
        host: app
        subset: v2
      weight: 50

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: model-service
spec:
  hosts:
  - model-service
  http:
  - match:
    - sourceLabels:
        version: v2
    route:
    - destination:
        host: model-service-serv
        subset: v2
  - route:
    - destination:
        host: model-service-serv
        subset: v1
